# jgdtrans-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: bench.yaml  ci.yaml  ci.yml
benches/: SemiDyna2023.par  bench.rs
doc/: katex.html
src/: builder.rs  dms.rs  error.rs  internal.rs  lib.rs  mesh.rs  par.rs  parser.rs  point.rs  trans.rs  transform.rs  transformer.rs  utils.rs  vector.rs
src/mesh/: cell.rs  code.rs  coord.rs  node.rs  unit.rs
