[package]
name = "jgdtrans"
version = "0.1.1"
edition = "2021"
authors = ["Kentaro Tatsumi <paqira.2019@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Coordinate Transformer by Gridded Correction Parameter (par file)"
readme = "README.md"
categories = ["science::geo"]
keywords = [
    "GIS",
    "par-file",
]

repository = "https://github.com/paqira/jgdtrans-rs"

[dependencies]
serde_repr = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
# for doctest
serde_json = { version = "1" }

[features]
default = []
serde = ["dep:serde", "dep:serde_repr"]
fma = []
