[package]
name = "jgdtrans"
version = "0.3.1"
edition = "2021"
rust-version = "1.86"
authors = ["Kentaro Tatsumi <paqira.2019@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/paqira/jgdtrans-rs"
description = "Coordinate Transformer by Gridded Correction Parameter (par file)"
keywords = ["GIS", "par-file", "JGD"]
readme = "README.md"
exclude = [".*"]
categories = ["science::geo"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = { version = "1" } # for doctest
serde_test = { version = "1" }
